// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Button  renders 1`] = `
<button
  class="p-button"
>
  Test content
</button>
`;

exports[`Button  renders as a link 1`] = `
<a
  class="p-button"
  href="http://example.com"
>
  Test content
</a>
`;
